1.21.1 -fluid transparency